# KinectFusionLib

./: CMakeLists.txt  KinfulibConfig.cmake  README.md  kinfulibConfig.cmake
include/: data_types.h  kinectfusion.h
src/: kinectfusion.cpp  pose_estimation.cpp  surface_measurement.cpp  surface_reconstruction.cpp
src/cuda/: extract_pointcloud.cu  marching_cubes.cu  pose_estimation.cu  surface_measurement.cu  surface_prediction.cu  surface_reconstruction.cu
src/cuda/include/: common.h
src/opencl/: surface_reconstruction.cl
src/opencl/include/: common.h
